--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -4,10 +4,53 @@
     padding: 0px;
 }
 
+#app {
+
+    height: 100vh;
+    background-color: #EFEFEF;
+}
+
 body {
     height: 100vh;
     border-color: rgba(230, 239, 253, 1);
 }
+/** Style for fav*/
+
+nav {
+    background-color: rgba(224, 82, 52, 1);
+    color: white;
+    font-size: 16px;
+}
+
+nav div a {
+    color: white;
+    font-size: 16px;
+}
+
+/**Search */
+.search-document{
+    width: 100%;
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+}
+.search-document input{
+    width: 100%;
+    height: 28px;
+}
+
+.search-document button{
+    margin: 0px;
+    padding: 10px;
+}
+
+
+.form-search{   
+
+    width: 60%;
+}
+
+/* */
 
 .vie-table {
     display: flex;
@@ -17,10 +60,12 @@ body {
 
 }
 
-.icon_download {
+.icon {
     height: 25px;
 }
 
+
+/* view documents */
 .row_document {
 
     min-width: 100%;
@@ -39,20 +84,26 @@ body {
     width: 100%;
 }
 
+.text-document {
 
-.table-document {
-    padding: 0px;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0;
 }
-
 a {
     text-decoration: none;
 }
 
+/** Table documents*/ 
 table {
     border-collapse: collapse;
     /* Combina los bordes adyacentes en uno solo */
     border: 1px solid #ccc;
     /* Establece el estilo del borde */
+    padding: 0px;
 }
 
 td,
@@ -63,42 +114,20 @@ th {
     /* Añade un espacio entre el contenido y el borde */
 }
 
-.text-document {
 
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0;
-}
 
-/**
-Nav*/
-
-nav {
-    background-color: rgba(224, 82, 52, 1);
-    color: white;
-    font-size: 16px;
-}
-
-nav div a {
-    color: white;
-    font-size: 16px;
-}
 
 .card-header {
-
+    display: flex;
+    flex-flow: row;
+    justify-content: space-between;
+    align-items: baseline;
     background-color: rgba(33, 44, 85, 1);
     color: white;
 
 }
 
-#app {
 
-    height: 100vh;
-    background-color: #EFEFEF;
-}
 
 /** forms*/
 
@@ -110,6 +139,8 @@ nav div a {
     align-items: center;
 
 }
+
+/** register, edit, show view document*/
 
 .container_file {
     width: 100%;
@@ -162,7 +193,7 @@ button {
     border: 0px;
 }
 
-form .icon_download {
+form .icon {
     height: 15px;
 }
 
@@ -193,34 +224,7 @@ form .icon_download {
     border-radius: 16px;
 }
 
-/**Search */
-
-.card-header{
-    display: flex;
-    flex-flow: row;
-    justify-content: space-between;
-    align-items: baseline;
-}
-.search-document{
-    width: 100%;
-    display: flex;
-    flex-flow: row;
-    align-items: center;
-}
-.search-document input{
-    width: 100%;
-    height: 28px;
-}
-
-.search-document button{
-    margin: 0px;
-    padding: 10px;
-}
 
 
-.form-search{   
-
-    width: 60%;
-}
 
 
